# pet-project

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  Dockerfile  HOWTO.md  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: github-actions-demo.yml
ansible/: hosts  initial.yml  registry-deploy.yml
ansible/nginx/: domain_conf  index.html  nginx.conf
ansible/registry/: docker-compose.yml
ansible/scripts/: email_push.py
